umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_azete.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h#v3" "N#n#v3" "C#h#v3" "C#h#v3"]
      :bonds [[0 1 "2"] [1 2 "1"] [2 3 "2"] [3 0 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h#v3" "N#n#v3" "C#h#v3" "C#h#v3"]
      :bonds [[0 1 "2"] [1 2 "1"] [2 3 "2"] [3 0 "1"]]}
    :success true}}
