umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_hydantoin.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["N#h#n#v2" "C#h2#v2" "C#v4" "O#n2#v2" "N#h#n#v2" "C#v4" "O#n2#v2"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "1"] [4 5 "1"] [5 6 "2"] [5 0 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["N#h#n#v2" "C#h2#v2" "C#v4" "O#n2#v2" "N#h#n#v2" "C#v4" "O#n2#v2"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "1"] [4 5 "1"] [5 6 "2"] [5 0 "1"]] :charge 0 :spin "#u0 #s1"}}}
