umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_large_15-crown-5.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms [
        "O#n2"
        "C#h2"
        "C#h2"
        "O#n2"
        "C#h2"
        "C#h2"
        "O#n2"
        "C#h2"
        "C#h2"
        "O#n2"
        "C#h2"
        "C#h2"
        "O#n2"
        "C#h2"
        "C#h2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 13 :single]
        [13 14 :single]
        [0 14 :single]]}
    :success true
    :tie-breaks [1 2 4 5 7 8 10 11 13 14]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      1 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      2 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      4 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      5 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      7 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      8 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      10 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      11 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      13 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      14 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms [
        "O#n2"
        "C#h2"
        "C#h2"
        "O#n2"
        "C#h2"
        "C#h2"
        "O#n2"
        "C#h2"
        "C#h2"
        "O#n2"
        "C#h2"
        "C#h2"
        "O#n2"
        "C#h2"
        "C#h2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 13 :single]
        [13 14 :single]
        [0 14 :single]]}
    :success true
    :tie-breaks [1 2 4 5 7 8 10 11 13 14]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      1 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      2 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      4 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      5 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      7 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      8 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      10 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      11 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      13 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      14 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]}}}
